[project]
name = "example_package_showa_yojyo"
version = "0.0.0"
authors = [
  { name="プレハブ小屋", email="yojyo@hotmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/showa-yojyo/packaging-tutorial/"
Issues = "https://github.com/showa-yojyo/packaging-tutorial/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
